corrected a logo visibility issue on the main page

--- a/sedona/css/style.css
+++ b/sedona/css/style.css
@@ -166,6 +166,7 @@ img {
 
 .page-header-logo {
   position: absolute;
+  z-index: 1;
 }
 
 .main-menu {
